# data-vectorization

./: pyproject.toml
src/: app.py  main.py
src/config/: config.py
